===================================
gnome-commander 1.2.9
---------------

Bug fixes:
 * Fixed problem #... (...)

New features:
 * New or updated docs: de, es
 * New or updated translations: da, es, eu, zh_CN
 * New key bindings:
      ...            ...


=======
gnome-commander 1.2.8.2
---------------

Bug fixes:
 * Fixed problem #591944 (permissions set to 000 after chmod)


===================================
gnome-commander 1.2.8.1
---------------

Bug fixes:
 * Fixed problem #587325 (crash in a clean chroot environment)
 * Fixed problem #589108 (build error on openSUSE)
 * Fixed problem #591206 (crash while sysconf() on FreeBSD)
 * Fixed problem with $c(16) counter formatting in advanced file rename templates


===================================
gnome-commander 1.2.8
---------------

Bug fixes:
 * Fixed problem #375357 (crash when cancelling calculation of dir properties)
 * Fixed problem #536446 (file name not focused for in-place renaming)
 * Fixed problem #539812 (crash when deleting files: broken it.po)
 * Fixed problem #548947 (non-UTF8 locale date problem)
 * Fixed problem #548948 (crash when home directory contains non-UTF8 characters)
 * Fixed problem #548961 (support for input method when rename or quicksearch)
 * Fixed problem #554586 (AC_PROG_CXX macro problem)
 * Fixed problem #554598 (GNOME Goal: LINGUAS)
 * Fixed problem #556664 (bookmarks can not be saved for mounted devices)
 * Fixed problem #556836 (pane scrolling when moving between panes)
 * Fixed problem #567404 (crash when INSERT pressed over subdir)
 * Fixed problem #567506 (slow startup for systems with many users)
 * Fixed problem #570727 (usage of deprecated gnome_url_show)
 * Fixed problem #571239 (replacing obsoleted GnomeColorPicker with GtkColorButton)
 * Fixed problem #571247 (replacing obsoleted GnomePixmap with GtkImage)
 * Fixed problem #571558 (replacing deprecated GNOME_STOCK_* buttons with GTK_STOCK_* counterparts)